--- a/final-front/public/index.html
+++ b/final-front/public/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="ourfont">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="background-color: #14181b">
+  <body style="background-color: #14181b" id="font-face">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  
+  <style>
+  @font-face {
+    font-family: 'NEXON Lv1 Gothic OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+  #app{
+    font-family: 'NEXON Lv1 Gothic OTF';
+  }
+  </style>
+@font-face
+\
 </html>
